unpackaged/main/default/objects/Workforce_Training_and_Licencing_Cost__c/Workforce_Training_and_Licencing_Cost__c.object-meta.xml
<CustomObject>
    <label>Workforce Training and Licencing Cost</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workforce Training and Licencing Cost Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workforce Training and Licencing Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>