unpackaged/main/default/objects/Workforce_Training_and_Licencing_Cost__c/fields/Applicable_for_from_years__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_from_years__c</fullName>
    <label>Applicable for/from years</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>