unpackaged/main/default/objects/Workforce_Training_and_Licencing_Cost__c/fields/Cost_in_Fujairah__c.field-meta.xml
<CustomField>
    <fullName>Cost_in_Fujairah__c</fullName>
    <label>Cost in Fujairah</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>