unpackaged/main/default/objects/Workforce_Training_and_Licencing_Cost__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>One time</fullName>
            </value>
            <value>
                <fullName>Applicable for (years)</fullName>
            </value>
            <value>
                <fullName>Applicable from (year)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>