unpackaged/main/default/objects/Workforce_Training_and_Licencing_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Type__c</columns>
    <columns>Workforce_Type__c</columns>
    <columns>Cost_in_Abu_Dhabi__c</columns>
    <columns>Cost_in_Ajman__c</columns>
    <columns>Cost_in_Dubai__c</columns>
    <columns>Cost_in_Fujairah__c</columns>
    <columns>Cost_in_Ras_Al_Khaimah__c</columns>
    <columns>Cost_in_Sharjah__c</columns>
    <columns>Cost_in_Umm_Al_Quawain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>